Track tech active tickets; add admin delete